# simple_depth_gauge

./: Main.py  README.md  pyproject.toml
