[tool.poetry]
name = "simple-depth-gauge"
version = "0.1.0"
description = ""
authors = ["malyshal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^2.0.1"
pyqt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
matplotlib = "^3.9.1.post1"
scipy = "^1.14.0"
pyopengl = "^3.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
